fix(leftpanel): show a dropdown on mobile
use orientation-based media queries to show
a dropdown or the left panel.
both ui elements are there to let users select a series.

--- a/src/BookLeftPanel.css
+++ b/src/BookLeftPanel.css
@@ -18,3 +18,49 @@
 .book-series-item span:hover {
   color: darkblue;
 }
+
+/* show a dropdown if the screen is too small */
+.book-dropdown {
+  display: none;
+  padding-top: 5px;
+  width: 100vw;
+}
+.book-dropdown > select {
+  width: 50vh;
+  height: 10vw;
+  font-size: 25px;
+}
+.book-dropdown > select > option {
+  font-size: 15px;
+}
+
+/* handle stuff for  */
+@media screen and (orientation: portrait) {
+  .book-series {
+    display: none;
+  }
+
+  .book-dropdown {
+    display: block;
+  }
+}
+
+@media screen and (orientation: landscape) and (max-width: 1250px) {
+  .book-series {
+    display: none;
+  }
+
+  .book-dropdown {
+    display: block;
+  }
+}
+
+@media screen and (orientation: landscape) and (min-width: 1250px) {
+  .book-series {
+    display: block;
+  }
+
+  .book-dropdown {
+    display: none;
+  }
+}
